# 37_4_2_VIDEO_PLAYER

./: CMakeLists.txt  Main.qml  main.cpp
